# gryphon2

./: CMakeLists.txt  LICENSE  README.md  run.sh  scratch.txt
apps/: printDiffusion.cpp  printEvents.cpp  printHaloFunction.cpp  printInjection.cpp  printSingleSource.cpp  printVaryModels.cpp  run.cpp  runModels.cpp  sandbox.cpp  testMsp.cpp  testSecondary.cpp
data/: helium_lis_Boschini2017.txt  proton_lis_Boschini2017.txt
include/: gryphon.h
include/gryphon/core/: cgs.h  diffusion.h  event.h  input.h  lis.h  output.h  pid.h  sourceprofile.h  xsecs.h
include/gryphon/galaxy/: Steiman2010.h  galaxy.h  jelly.h  uniform.h
include/gryphon/particle/: fixedspectrum.h  msp.h  particle.h  secondary.h  varyefficiency.h
include/gryphon/utils/: git_revision.h  io.h  logging.h  lookupContainers.h  numeric.h  progressbar.h  random.h  timer.h  vector3.h
src/core/: diffusion.cpp  input.cpp  lis.cpp  output.cpp  sourceprofile.cpp  xsecs.cpp
src/galaxy/: Steiman2010.cpp  galaxy.cpp  jelly.cpp  uniform.cpp
src/particle/: fixedspectrum.cpp  msp.cpp  particle.cpp  secondary.cpp  varyefficiency.cpp
src/utils/: io.cpp  logging.cpp  numeric.cpp  progressbar.cpp  timer.cpp
tests/: testRng.cpp
